--- a/FeatureSelection/FeatureSelection.csproj
+++ b/FeatureSelection/FeatureSelection.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Crossvalidation.cs" />
     <Compile Include="FileManip.cs" />
     <Compile Include="Filter.cs" />
+    <Compile Include="KNNevol2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
